added some apis required for provider
